--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   height: 100vh;
-  background-color: black;
+  background-color: #000;
   font-family: "Poppins", sans-serif;
 }
