--- a/src/App.css
+++ b/src/App.css
@@ -12,204 +12,35 @@
   font-family: "Poppins", sans-serif;
 }
 
-.background {
-    @keyframes move {
-      100% {
-          transform: translate3d(0, 0, 1px) rotate(360deg);
-      }
-  }
-
-  .background {
-      position: fixed;
-      width: 100vw;
-      height: 100vh;
-      top: 0;
-      left: 0;
-      background: #3E1E68;
-      overflow: hidden;
-  }
-
-  .background span {
-      width: 18vmin;
-      height: 18vmin;
-      border-radius: 18vmin;
-      backface-visibility: hidden;
-      position: absolute;
-      animation: move;
-      animation-duration: 45;
-      animation-timing-function: linear;
-      animation-iteration-count: infinite;
-  }
-
-
-  .background span:nth-child(0) {
-      color: #E45A84;
-      top: 19%;
-      left: 41%;
-      animation-duration: 36s;
-      animation-delay: -48s;
-      transform-origin: 9vw 21vh;
-      box-shadow: 36vmin 0 5.307751722014629vmin currentColor;
-  }
-  .background span:nth-child(1) {
-      color: #583C87;
-      top: 95%;
-      left: 90%;
-      animation-duration: 47s;
-      animation-delay: -37s;
-      transform-origin: 0vw -20vh;
-      box-shadow: -36vmin 0 5.072037694716852vmin currentColor;
-  }
-  .background span:nth-child(2) {
-      color: #E45A84;
-      top: 1%;
-      left: 22%;
-      animation-duration: 22s;
-      animation-delay: -28s;
-      transform-origin: 13vw -18vh;
-      box-shadow: 36vmin 0 4.679144359121548vmin currentColor;
-  }
-  .background span:nth-child(3) {
-      color: #E45A84;
-      top: 55%;
-      left: 92%;
-      animation-duration: 54s;
-      animation-delay: -43s;
-      transform-origin: 8vw 10vh;
-      box-shadow: -36vmin 0 5.352679117387359vmin currentColor;
-  }
-  .background span:nth-child(4) {
-      color: #E45A84;
-      top: 28%;
-      left: 89%;
-      animation-duration: 34s;
-      animation-delay: -23s;
-      transform-origin: 1vw 13vh;
-      box-shadow: 36vmin 0 5.064999679742241vmin currentColor;
-  }
-  .background span:nth-child(5) {
-      color: #583C87;
-      top: 74%;
-      left: 79%;
-      animation-duration: 50s;
-      animation-delay: -17s;
-      transform-origin: -23vw -16vh;
-      box-shadow: -36vmin 0 4.898510612054022vmin currentColor;
-  }
-  .background span:nth-child(6) {
-      color: #583C87;
-      top: 20%;
-      left: 82%;
-      animation-duration: 9s;
-      animation-delay: -41s;
-      transform-origin: 22vw -18vh;
-      box-shadow: 36vmin 0 5.25583208281239vmin currentColor;
-  }
-  .background span:nth-child(7) {
-      color: #E45A84;
-      top: 99%;
-      left: 66%;
-      animation-duration: 23s;
-      animation-delay: -25s;
-      transform-origin: -3vw -12vh;
-      box-shadow: -36vmin 0 4.879611515899478vmin currentColor;
-  }
-  .background span:nth-child(8) {
-      color: #FFACAC;
-      top: 3%;
-      left: 82%;
-      animation-duration: 52s;
-      animation-delay: -15s;
-      transform-origin: 24vw -8vh;
-      box-shadow: -36vmin 0 4.696334667166245vmin currentColor;
-  }
-  .background span:nth-child(9) {
-      color: #583C87;
-      top: 20%;
-      left: 89%;
-      animation-duration: 10s;
-      animation-delay: -47s;
-      transform-origin: 19vw -23vh;
-      box-shadow: 36vmin 0 4.609418982856126vmin currentColor;
-  }
-  .background span:nth-child(10) {
-      color: #E45A84;
-      top: 76%;
-      left: 10%;
-      animation-duration: 21s;
-      animation-delay: -31s;
-      transform-origin: -8vw -16vh;
-      box-shadow: -36vmin 0 4.901195063823623vmin currentColor;
-  }
-  .background span:nth-child(11) {
-      color: #583C87;
-      top: 52%;
-      left: 49%;
-      animation-duration: 9s;
-      animation-delay: -49s;
-      transform-origin: -2vw -18vh;
-      box-shadow: -36vmin 0 4.527151385408911vmin currentColor;
-  }
-  .background span:nth-child(12) {
-      color: #583C87;
-      top: 49%;
-      left: 15%;
-      animation-duration: 9s;
-      animation-delay: -8s;
-      transform-origin: 4vw 1vh;
-      box-shadow: -36vmin 0 4.635337495456589vmin currentColor;
-  }
-  .background span:nth-child(13) {
-      color: #E45A84;
-      top: 100%;
-      left: 20%;
-      animation-duration: 7s;
-      animation-delay: -35s;
-      transform-origin: 1vw 15vh;
-      box-shadow: -36vmin 0 5.109786130623406vmin currentColor;
-  }
-  .background span:nth-child(14) {
-      color: #583C87;
-      top: 93%;
-      left: 75%;
-      animation-duration: 16s;
-      animation-delay: -14s;
-      transform-origin: -20vw -23vh;
-      box-shadow: 36vmin 0 5.28056584091999vmin currentColor;
-  }
-  .background span:nth-child(15) {
-      color: #FFACAC;
-      top: 16%;
-      left: 59%;
-      animation-duration: 33s;
-      animation-delay: -36s;
-      transform-origin: -5vw 24vh;
-      box-shadow: -36vmin 0 5.008693126429211vmin currentColor;
-  }
-  .background span:nth-child(16) {
-      color: #E45A84;
-      top: 65%;
-      left: 35%;
-      animation-duration: 14s;
-      animation-delay: -17s;
-      transform-origin: -21vw 0vh;
-      box-shadow: -36vmin 0 5.285253362965998vmin currentColor;
-  }
-  .background span:nth-child(17) {
-      color: #E45A84;
-      top: 95%;
-      left: 76%;
-      animation-duration: 29s;
-      animation-delay: -18s;
-      transform-origin: 21vw -17vh;
-      box-shadow: -36vmin 0 4.6776965711101735vmin currentColor;
-  }
-
-  .background span:nth-child(18) {
-      color: #E45A84;
-      top: 24%;
-      left: 17%;
-      animation-duration: 37s;
-      animation-delay: -44s;
-  }
+.loader {
+  width: 48px;
+  height: 48px;
+  display: inline-block;
+  position: relative;
+  border: 4px solid #FFF;
+  box-sizing: border-box;
+  animation: fill 2s linear infinite alternate;
+  color: rgba(17, 7, 4, 0.9);
+  border-radius: 0 0 4px 4px;
 }
+.loader::after {
+  content: '';  
+  box-sizing: border-box;
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+  border: 4px solid #FFF;
+  width: 20px;
+  height: 25px;
+  border-radius: 0 4px 4px 0;
+}
+
+@keyframes fill {
+  0% {
+    box-shadow: 0 0  inset;
+  }
+  100% {
+    box-shadow: 0 -48px inset;
+  }
+} 
